@@ -1,5 +1,5 @@
 diff --git a/KlingonAssistant/AndroidManifest.xml b/KlingonAssistant/AndroidManifest.xml
-index 111b5b2..476cd1a 100644
+index 6c94fc5..62d6657 100644
 --- a/KlingonAssistant/AndroidManifest.xml
 +++ b/KlingonAssistant/AndroidManifest.xml
 @@ -25,7 +25,7 @@
@@ -146,10 +146,10 @@ index a64a487..e15ccff 100644
 +  */
  }
 diff --git a/KlingonAssistant/src/org/tlhInganHol/android/klingonassistant/KlingonAssistant.java b/KlingonAssistant/src/org/tlhInganHol/android/klingonassistant/KlingonAssistant.java
-index dc5cc1f..8aed2cc 100644
+index e8d41b6..a3291a0 100644
 --- a/KlingonAssistant/src/org/tlhInganHol/android/klingonassistant/KlingonAssistant.java
 +++ b/KlingonAssistant/src/org/tlhInganHol/android/klingonassistant/KlingonAssistant.java
-@@ -44,10 +44,10 @@ import wei.mark.standout.StandOutWindow;
+@@ -45,10 +45,10 @@ import wei.mark.standout.StandOutWindow;
  import com.actionbarsherlock.view.MenuItem;
  
  // TUTORIAL:
@@ -164,7 +164,7 @@ index dc5cc1f..8aed2cc 100644
  
  /**
   * The main activity for the dictionary. Displays search results triggered by the search dialog and
-@@ -57,7 +57,7 @@ public class KlingonAssistant extends BaseActivity {
+@@ -58,7 +58,7 @@ public class KlingonAssistant extends BaseActivity {
    private static final String TAG = "KlingonAssistant";
  
    // Whether to include the tutorial or not. If false, the code should be stripped out of the binary.
@@ -173,7 +173,7 @@ index dc5cc1f..8aed2cc 100644
  
    // Preference key for whether to show help.
    public static final String  KEY_SHOW_HELP                    = "show_help";
-@@ -91,6 +91,7 @@ public class KlingonAssistant extends BaseActivity {
+@@ -92,6 +92,7 @@ public class KlingonAssistant extends BaseActivity {
    }
  
    private void setupTutorial() {
@@ -181,7 +181,7 @@ index dc5cc1f..8aed2cc 100644
      if (INCLUDE_TUTORIAL) {
        // ShowcaseView for the initial tutorial.
        ShowcaseView.ConfigOptions mShowcaseViewOptions = new ShowcaseView.ConfigOptions();
-@@ -148,6 +149,8 @@ public class KlingonAssistant extends BaseActivity {
+@@ -149,6 +150,8 @@ public class KlingonAssistant extends BaseActivity {
                   break;
                 default:
                   mShowcaseView.hide();
@@ -190,7 +190,7 @@ index dc5cc1f..8aed2cc 100644
                   displayHelp(QUERY_FOR_ABOUT);
  
                   // Unset the two flags since the tutorial and help have been shown.
-@@ -157,11 +160,13 @@ public class KlingonAssistant extends BaseActivity {
+@@ -158,11 +161,13 @@ public class KlingonAssistant extends BaseActivity {
                   sharedPrefsEd.putBoolean(Preferences.KEY_RUN_TUTORIAL_CHECKBOX_PREFERENCE, false);
                   sharedPrefsEd.commit();
  
