@@ -1,6 +1,7 @@
 CHANGELOG
 
-2014-07-15: Work around a bug where the action bar sometimes disappears.
+2014-07-21: Link hand and foot words; improve Shakespeare entries; added lyrics for {yIH bom}.
+2014-07-15: Try to work around a bug where the action bar sometimes disappears.
 2014-06-14: Minor edits to database.
 2014-04-29: Better integration with TTS.
 2014-04-16: Add Text-To_Speech ability (requires TTS engine which supports Klingon).
